--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+<header>
+    <% include partials/_header.ejs %>
+</header>
 <head>
   <title>TinyApp</title>
 </head>
 <body>
   <%= urls%>
-
+  &nbsp
   <%= appURL%>
 </body>
 </html>
