--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <header>
-    <% include /views/partials/_header.ejs %>
+    <% include partials/_header.ejs %>
 </header>
 <head>
   <title>TinyApp</title>
 </head>
 <body>
-  <%= urls%>
+  <%= shortURL%>
   &nbsp
-  <link href="example.com">
+  <%= fullURL%>
 </body>
 </html>
