Added delete button.

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,5 +10,8 @@
   <%= urls%>
   &nbsp
   <%= appURL%>
+  <form method="post" action="urls">
+    <button type="submit">Delete</button>
+  </form>
 </body>
 </html>
