Added edit functionality

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -13,13 +13,16 @@
         <div class="id">
           <a href="/urls/<%= id %>">
             <%= id %> - <%= urls[id] %>
+          </a>
         </div>
+        <form action="/urls/<%= id %>" method="GET">
+          <input type="submit" value="Edit">
+        </form>
         <form action="/urls/<%= id %>/delete" method="POST">
           <input type="submit" value="Delete">
         </form>
       </li>
   <% } %>
-    </form>
   </ul>
 </body>
 </html>
