--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -7,8 +7,12 @@
   <title>TinyApp</title>
 </head>
 <body>
-  <%= id%>
-  &nbsp
-  <%= fullURL%>
+  <form action="/urls/<%= id %>" method="POST">
+    <label>
+      <input type="text" name="longURL" value="<%= longURL %>">
+    </label>
+    <br><br>
+    <input type="submit" value="Edit">
+  </form>
 </body>
 </html>
