--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,3 +1,9 @@
 <!-- views/partials/_header.ejs -->
 <meta charset="UTF-8">
 <title>Title</title>
+<form action="/urls/<%= id %>" method="POST">
+  <label>
+    <input type="text" name="username" value="username">
+  </label>
+  <input type="submit" value="Submit">
+</form>
