--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,7 +1,7 @@
 <!-- views/partials/_header.ejs -->
 <meta charset="UTF-8">
-<title>Title</title>
-<form action="/urls/<%= id %>" method="POST">
+<title>TinyApp</title>
+<form action="/login>" method="POST">
   <label>
     <input type="text" name="username" value="username">
   </label>
