--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -12,7 +12,7 @@
       <input type="text" name="longURL" value="<%= longURL %>">
     </label>
     <br><br>
-    <input type="submit" value="Edit">
+    <input type="submit" value="Change">
   </form>
 </body>
 </html>
