--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -3,26 +3,20 @@
 <header>
     <% include partials/_header.ejs %>
 </header>
-<head>
-  <title>TinyApp</title>
-</head>
 <body>
-  <ul>
-    <% for (id in urls) {%>
+    <% for (id in urlDatabase) {%>
       <li>
         <div class="id">
-          <a href="/urls/<%= id %>">
-            <%= id %> - <%= urls[id] %>
-          </a>
-        </div>
+          <label> <%= id %>: </label>
+          <a href="/urls/<%= id %>"> <%= urlDatabase[id] %> </a>
         <form action="/urls/<%= id %>" method="GET">
           <input type="submit" value="Edit">
         </form>
         <form action="/urls/<%= id %>/delete" method="POST">
           <input type="submit" value="Delete">
         </form>
+        </div>
       </li>
-  <% } %>
-  </ul>
+    <% } %>
 </body>
 </html>
