--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,9 +1,10 @@
 <!-- views/partials/_header.ejs -->
 <meta charset="UTF-8">
 <title>TinyApp</title>
-<form action="/login>" method="POST">
+<form action="/login" method="POST">
   <label>
-    <input type="text" name="username" value="username">
+    <input id="username" type="text" name="username" value="username">
   </label>
   <input type="submit" value="Submit">
 </form>
+<br>
