--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -4,7 +4,7 @@
     <% include partials/_header.ejs %>
 </header>
 <body>
-  <form action="/urls" method="POST">
+  <form action="/register" method="POST">
     <label>Register</label>
     <br>
       <label for"email">Email:</label>
