--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -8,9 +8,9 @@
     <label>Register</label>
     <br>
       <label for"email">Email:</label>
-      <input id="email" type="email" name="email" value="example@example.com">
+      <input id="email" type="email" name="email" value="">
       <label for"password">Password:</label>
-      <input id="password" type="password" name="password" value="Password">
+      <input id="password" type="password" name="password" value="">
     <input type="submit" value="Register">
   </form>
 </body>
