--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -18,5 +18,11 @@
         </div>
       </li>
     <% } %>
+  <br>
+  <form action="/logout" method="POST">
+    <label>
+      <input id="user_id" type="button" name="user_id" value=<%= user_id %>>
+    </label>
+  </form>
 </body>
 </html>
