--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <header>
-    <% include partials/_header.ejs %>
+  <% include partials/_header.ejs %>
 </header>
 <body>
-    <% for (id in urlDatabase) {%>
+    <% for (id in urlDatabase) { if (urlDatabase[id]["id"] == user_id) { %>
       <li>
         <div class="id">
           <label> <%= id %>: </label>
-          <a href="/urls/<%= id %>"> <%= urlDatabase[id] %> </a>
+          <a href="/urls/<%= id %>"> <%= urlDatabase[id]["shortURL"] %> </a>
         <form action="/urls/<%= id %>" method="GET">
           <input type="submit" value="Edit">
         </form>
@@ -17,7 +17,7 @@
         </form>
         </div>
       </li>
-    <% } %>
+    <% } } %>
   <br>
   <form action="/logout" method="POST">
     <label>
