Fixed logout button

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,14 +1,17 @@
 <!-- views/partials/_header.ejs -->
 <meta charset="UTF-8">
 <title>TinyApp</title>
-<a href="/urls/login">Login Page</a>
-<br>
-<a href="/urls/register">Registration Page</a>
-</ul>
-<br>
-<br>
-<% if (user_id !== {}) {%>
-  Logged in as: <%= user_id %>
-<% } %>
-<br>
-<br>
+</header>
+<body style="font-size:20px; padding:50px;">
+  <% if (user_id !== undefined) {%>
+    Logged in as: <%= users[user_id]["email"] %>
+    <form action="/logout" method="POST">
+      <label>
+        <input id="logout" type="submit" name="logout" value="Logout">
+      </label>
+    </form>
+  <% } else {%>
+    <a href="/urls/login">Login Page</a>
+    <br>
+    <a href="/urls/register">Registration Page</a>
+  <% } %>
