--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -4,19 +4,19 @@
   <% include partials/_header.ejs %>
     <a href="/urls/new">Create a New Short Link</a>
     <% for (id in urlDatabase) {
-      if (urlDatabase[id]["id"] == user_id) { %>
-      <li>
-        <div class="id">
-          <label> <%= id %> <%= urlDatabase[id] %> : </label>
-          <a href="/urls/<%= id %>"> <%= urlDatabase[id]["shortURL"] %> </a>
-        <form action="/urls/<%= id %>" method="GET">
-          <input type="submit" value="Edit">
-        </form>
-        <form action="/urls/<%= id %>/delete" method="POST">
-          <input type="submit" value="Delete">
-        </form>
-        </div>
-      </li>
+      if (urlDatabase[id]["userID"] == user_id) { %>
+        <li>
+          <div class="id">
+            <label> <%= id %> : </label>
+            <a href="/urls/<%= id %>"> <%= urlDatabase[id]["longURL"] %> </a>
+          <form action="/urls/<%= id %>" method="GET">
+            <input type="submit" value="Edit">
+          </form>
+          <form action="/urls/<%= id %>/delete" method="POST">
+            <input type="submit" value="Delete">
+          </form>
+          </div>
+        </li>
     <% } } %>
 </body>
 </html>
