Added additional html for easier navigation

--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
   <header>
     <% include partials/_header.ejs %>
+    <h1>Login</h1>
     <form action="/login" method="POST">
       <br>
       <label for"email">Email:</label>
