--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <header>
   <% include partials/_header.ejs %>
+  <h1>Register</h1>
   <form action="/register" method="POST">
     <br>
       <label for"email">Email:</label>
